Menu class refactoring, esc works, no loading screen